Fix category spacing

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -307,5 +307,5 @@ body {
   font-size: 21px;
 }
 #categoryForm {
-  margin-top: 20px;
+  margin-top: 15px;
 }
